fixed height depending on mobile device

--- a/static/css/decodedarfur.css
+++ b/static/css/decodedarfur.css
@@ -596,6 +596,11 @@ p.progress-tracker-label {
     padding-left: 0px;
     padding-right: 0px;
   }
+
+  .tablet-container,
+  .tabletcarousel{
+    height: 465px;
+  }
 }
 
 /** DESKTOP MEDIA QUERY (992px+) **/
@@ -721,48 +726,62 @@ p.progress-tracker-label {
     }
 }
 
-/** For top 3 popular tablet devices **/
-@media screen and (min-width: 768px) and (max-width:768px) {
-    .tablet-container{
-        height: 768px;
+
+/** For popular mobile devices **/
+@media screen and (min-width: 432px) and (max-width:432px) {
+    .mobile-container,
+    .mobilecarousel{
+        height: 432px;
     }
 }
 
-@media screen and (min-width: 600px) and (max-width:600px) {
-    .tablet-container{
-        height: 600px;
+@media screen and (min-width: 414px) and (max-width:414px) {
+    .mobile-container,
+    .mobilecarousel{
+        height: 414px;
+    }
+}
+
+@media screen and (min-width: 412px) and (max-width:412px) {
+    .mobile-container,
+    .mobilecarousel{
+        height: 412px;
     }
 }
 
 /** Extra one for minimum desktop width on MacBook Pro **/
 @media screen and (min-width: 400px) and (max-width:400px) {
-    .mobile-container{
+    .mobile-container,
+    .mobilecarousel{
         height: 400px;
     }
 }
 
-@media screen and (min-width: 800px) and (max-width:800px) {
-    .tablet-container{
-        height: 800px;
+@media screen and (min-width: 384px) and (max-width:384px) {
+    .mobile-container,
+    .mobilecarousel{
+        height: 384px;
     }
 }
 
-/** For top 3 popular mobile devices **/
 @media screen and (min-width: 375px) and (max-width:375px) {
-    .mobile-container{
+    .mobile-container,
+    .mobilecarousel{
         height: 375px;
     }
 }
 
 @media screen and (min-width: 360px) and (max-width:360px) {
-    .mobile-container{
+    .mobile-container,
+    .mobilecarousel{
         height: 360px;
     }
 }
 
 
 @media screen and (min-width: 320px) and (max-width:320px) {
-    .mobile-container{
+    .mobile-container,
+    .mobilecarousel{
         height: 320px;
     }
 }
